--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 <body>
 
     <div class="container">
-        <h1>تطبيق اتصالات جماعية متقدم - الإصدار 2.0</h1>
+        <h1>تطبيق اتصالات الغول - الإصدار 2.0</h1>
 
         <!-- منطقة الإعداد -->
         <div class="area" id="setup-area">
